--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,6 +2,12 @@
 framework:
     secret: '%env(APP_SECRET)%'
 
+    default_locale: fr
+
+    translator:
+        default_path: '%kernel.project_dir%/translations'
+        fallbacks: ['fr']
+
     # Note that the session will be started ONLY if you read or write from it.
     session: true
 
